--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -71,6 +71,20 @@
           
     </div>
 
+    <footer class="footer" id="contact">
+        <div class="footer-container">
+          <div class="footer-links">
+          <h3>Quick Links</h3>
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#product">Product</a></li>
+              <li><a href="#expertise">Expertise</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li><a href="#user">User</a></li>
+            </ul>
+          </div>
+          
     <div class="footer-social">
         <h4>Follow Us</h4>
         <div class="social-icons">
