--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -84,7 +84,16 @@
               <li><a href="#user">User</a></li>
             </ul>
           </div>
-          
+    <footer class="footer" id="contact">
+        <div class="footer-container">
+          <div class="footer-links">
+          <h3>Services</h3>
+            <ul>
+              <li><a href="#Profile Desa">About</a></li>
+              <li><a href="#UMKM">Portfolio</a></li>
+            </ul>
+          </div>
+
     <div class="footer-social">
         <h4>Follow Us</h4>
         <div class="social-icons">
