--- a/(FE)/html/detail_produk.html
+++ b/(FE)/html/detail_produk.html
@@ -4,26 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detail Produk</title>
-  <link rel="stylesheet" href="detail.css">
+  <link rel="stylesheet" href="/(FE)/css/detail.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 <body>
 
   <div class="navbar">
-    <div class="navbar-left">
-      <img src="logo.gif" class="logo">
-      <span class="site-name">UMKM DESA MARGODADI</span>
-    </div>
-    <input type="text" placeholder="Cari produk disini" class="search-box">
-    <div class="navbar-right">
-        <img src="Gambar/search_icon.png" class="search-icon">
-        <img src="Gambar/favorite_icon.png" class="favorite-icon">
-				<p class="title">User</p>
-				<img class="profile">
-    </div>
-  </div>
+    <img src="/resources/assets/logo.gif" alt="Logo Margodadi" class="logo">
+    <h1>UMKM<br> DESA MARGODADI</h1>
+        <p class="menu-button">ABOUT</p>
+        <p class="menu-button">FAVORIT</p>
+        <p class="menu-button">PRODUCT</p>
+        <p class="menu-button">MASUK</p>
+        <p class="menu-button">DAFTAR</p>
+</div>
 
-  <div class="main-section">
+  <div class="content">
 	  <div class="box">
 		  <img class="pic" src="image.png">
 		    <div class="product">
