--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -20,8 +20,12 @@
     <div class="content">
         <div class="left-section">
             <div class="box-login">
-            <div class="login-box">   
-                <h2>Login</h2> 
+            <div class="login-box">
+                <div class="container">
+                    <div class="login-line">
+                    <h2 class="left-section">Login</h2> 
+                </div> 
+                </div>
                 <h3>UMKM<br>DESA MARGODADI</h3>      
                 <form action="#">
                     <p>Email Address</p>
