--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -78,7 +78,7 @@
     <footer class="footer" id="contact">
         <div class="footer-container">
           <div class="footer-links">
-          <h3>Quick Links</h3>
+          <h3>QUICK LINKS</h3>
             <ul>
               <li><a href="#about">Home</a></li>
               <li><a href="#portfolio">About<a></li>
@@ -86,10 +86,8 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
-          
-        <div class="footer-container">
           <div class="footer-links">
-          <h3>Services</h3>
+          <h3>SERVICES</h3>
             <ul>
               <li><a href="#Profile Desa">About</a></li>
               <li><a href="#UMKM">Portfolio</a></li>
@@ -118,7 +116,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; KSI-RC 06 Copyright 2024 - All Right Reserved.</p>
+      <p> KSI-RC 06 Copyright 2024 - All Right Reserved.</p>
     </div>
     </footer>
   
