--- a/(FE)/html/addproduct.html
+++ b/(FE)/html/addproduct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menambahkan Produk - UMKM Desa Margodadi</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/addproduct.css">
 </head>
 <body>
     <header>
