--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <div class="navbar">
+      <div class="navbar-left">
         <img src="/resources/assets/logo.gif" alt="Logo Margodadi" class="logo">
-        <h1>UMKM<br> DESA MARGODADI</h1>
-            <p class="menu-button">ABOUT</p>
-            <p class="menu-button">FAVORIT</p>
-            <p class="menu-button">PRODUCT</p>
-            <p class="menu-button">MASUK</p>
-            <p class="menu-button">DAFTAR</p>
+        <span class="site-name">UMKM DESA MARGODADI</span>
+      </div>
+      <div class="navbar-center">
+        <a href="#about">ABOUT</a>
+        <a href="#favorit">FAVORIT</a>
+        <a href="#product">PRODUCT</a>
+        <a href="#masuk">MASUK</a>
+        <a href="#daftar">DAFTAR</a>
+      </div>
     </div>
 
     <div class="content">
