--- a/(FE)/html/userpage.html
+++ b/(FE)/html/userpage.html
@@ -4,50 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UMKM Desa Margodadi</title>
-  <link rel="stylesheet" href="/FE/css/userpage.css">
+  <link rel="stylesheet" href="/(FE)/css/userpage.css">
 </head>
 <body>
 
   <div class="navbar">
     <div class="navbar-left">
-      <img src="/Gambar/menu_icon.png" alt="Menu Icon" class="menu-icon">
-      <img src="/Gambar/Logo_Desa.jpg" alt="UMKM Desa Margodadi Logo" class="logo">
+      <img src="/resources/assets/logo desa.jpg" class="logo">
       <span class="site-name">UMKM DESA MARGODADI</span>
     </div>
-    <input type="text" placeholder="Cari produk disini" class="search-box">
-    <div class="navbar-right">
-        <img src="/Gambar/search_icon.png" alt="Search Icon" class="search-icon">
-        <img src="/Gambar/favorite_icon.png" alt="Favorite Icon" class="favorite-icon">
+    <div class="navbar-center">
+      <a href="#about">ABOUT</a>
+      <a href="#favorit">FAVORIT</a>
+      <a href="#product">PRODUCT</a>
+      <a href="#masuk">MASUK</a>
+      <a href="#daftar">DAFTAR</a>
     </div>
-    <div class="user-actions">
-        <span class="user-name">User</span>
-        <img src="/Gambar/profile_picture.png" alt="Profil Pengguna">
-      </div>
   </div>
 
   <div main="main-section">
     <div class="profile-card">
-        <img src="/Gambar/profile_picture.png" alt="User Picture" class="profile-picture">
+        <img src="/resources/assets/profile_picture.png" alt="User Picture" class="profile-picture">
         <div class="profile-info">
           <div class="info-item">
             <span class="label">Username</span>
             <input type="text" id="Username" value="Username">
-            <img src="/Gambar/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
+            <img src="/resources/assets/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
           </div>
           <div class="info-item">
             <span class="label">Email</span>
             <input type="text" id="Email" value="@email.com">
-            <img src="/Gambar/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
+            <img src="/resources/assets/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
           </div>
           <div class="info-item">
             <span class="label">Alamat</span>
             <input type="text" id="Alamat" value="Street 23, Metro">
-            <img src="/Gambar/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
+            <img src="/resources/assets/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
           </div>
           <div class="info-item">
             <span class="label">Tanggal Lahir</span>
             <input type="text" id="Tanggal Lahir" value="23/10/2003">
-            <img src="/Gambar/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
+            <img src="/resources/assets/edit_icon.jpeg" alt="Edit Icon" class="edit-icon">
           </div>
         </div>
       </div>
