--- a/(FE)/html/homepage2.html
+++ b/(FE)/html/homepage2.html
@@ -10,7 +10,7 @@
 
   <div class="navbar">
     <div class="navbar-left">
-      <img src="/resources/assets/logo desa.jpg" class="logo">
+        <img src="/resources/assets/logo.gif" alt="Logo Margodadi" class="logo">
       <span class="site-name">UMKM DESA MARGODADI</span>
     </div>
     <div class="navbar-center">
