--- a/(FE)/html/detail_produk.html
+++ b/(FE)/html/detail_produk.html
@@ -21,7 +21,7 @@
 
   <div class="main-section">
 	  <div class="box">
-		  <img class="pic" src="/resources/assets/">
+		  <img class="pic" src="/resources/assets/kerajinan1.png">
 		    <div class="product">
 			    <p class="product-name">Nama Produk</p>
           <p class="price">Rp. 20.000</p>
