--- a/(FE)/html/detail_produk.html
+++ b/(FE)/html/detail_produk.html
@@ -69,27 +69,39 @@
     
         <div class="user-experience">
             <div class="user-review">
-                <div class="user-stars">★★★★★</div>
-                <p class="username">Pengguna</p>
+              <div class="user-stars">★★★★★</div>
+                <div class="user-info">
+                  <img class="profile-pic" src="/resources/assets/image-9.png" alt="User Profile">
+                  <p class="username">Pengguna</p>
                 <p class="variant">Varian: null</p>
                 <p class="comment">Produk oke (y)</p>
             </div>
             <div class="user-review">
-                <div class="user-stars">★★★★★</div>
-                <p class="username">Pengguna</p>
+              <div class="user-stars">★★★★★</div>
+                <div class="user-info">
+                  <img class="profile-pic" src="/resources/assets/image-9.png" alt="User Profile">
+                  <div class="user-rating">
+                      <p class="username">Pengguna</p>
+                  </div>
                 <p class="variant">Varian: null</p>
                 <p class="comment">Produk oke (y)</p>
             </div>
             <div class="user-review">
-                <div class="user-stars">★★★★★</div>
-                <p class="username">Pengguna</p>
+              <div class="user-stars">★★★★★</div>
+                <div class="user-info">
+                  <img class="profile-pic" src="/resources/assets/image-9.png" alt="User Profile">
+                  <div class="user-rating">
+                      <p class="username">Pengguna</p>
+                  </div>
                 <p class="variant">Varian: null</p>
                 <p class="comment">Produk oke (y)</p>
+            </div>
             </div>
         </div>
     </div>
     </div>
-    
+    </div>
+  </div>
   
   <footer class="footer" id="contact">
     <div class="footer-container">
