--- a/(FE)/html/detail_produk.html
+++ b/(FE)/html/detail_produk.html
@@ -9,15 +9,19 @@
 <body >
 
   <div class="navbar">
-      <img src="/resources/assets/logo.gif" class="logo">
+    <div class="navbar-left">
+      <img src="/resources/assets/logo.gif" alt="Logo Margodadi" class="logo">
       <h1 class="site-name">UMKM<br> DESA MARGODADI</h1>
-      <p class="menu-button">ABOUT</p>
-      <p class="menu-button">FAVORIT</p>
-      <p class="menu-button">PRODUCT</p>
-      <p class="menu-button">MASUK</p>
-      <p class="menu-button">DAFTAR</p>
+    </div>
+    <div class="navbar-center">
+      <a href="#about">ABOUT</a>
+      <a href="#favorit">FAVORIT</a>
+      <a href="#product">PRODUCT</a>
+      <a href="#masuk">MASUK</a>
+      <a href="#daftar">DAFTAR</a>
     </div>
   </div>
+
 
   <div class="content">
     <div class="box">
