--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -10,7 +10,7 @@
     <div class="navbar">
       <div class="navbar-left">
         <img src="/resources/assets/logo.gif" alt="Logo Margodadi" class="logo">
-        <span class="site-name">UMKM DESA MARGODADI</span>
+        <h1 class="site-name">UMKM<br> DESA MARGODADI</h1>
       </div>
       <div class="navbar-center">
         <a href="#about">ABOUT</a>
