--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="/(FE)/css/login page.css">
 </head>
 <body>
-    <div class="navbar">
-      <div class="navbar-left">
+    <nav class="navbar">
+      <nav class="navbar-left">
         <img src="/resources/assets/logo.gif" alt="Logo Margodadi" class="logo">
         <h1 class="site-name">UMKM<br> DESA MARGODADI</h1>
-      </div>
-      <div class="navbar-center">
+      </nav>
+      <nav class="navbar-center">
         <a href="#about">ABOUT</a>
         <a href="#favorit">FAVORIT</a>
         <a href="#product">PRODUCT</a>
         <a href="#masuk">MASUK</a>
         <a href="#daftar">DAFTAR</a>
-      </div>
-    </div>
+      </nav>
+    </nav>
 
     <div class="content">
         <div class="left-section">
