--- a/(FE)/html/aboutus.html
+++ b/(FE)/html/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UMKM Desa Margodadi</title>
-    <link rel="stylesheet" href="/(FE)/css/About Us.css">
+    <link rel="stylesheet" href="/(FE)/css/aboutus.css">
 </head>
 <body>
     <header>
