--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
       <nav class="navbar-left">
         <img src="/resources/assets/logo.gif" alt="Logo Margodadi" class="logo">
-        <h1 class="site-name">UMKM<br> DESA MARGODADI</h1>
+        <h1 class="site-name">UMKM<br>MARGODADI</h1>
       </nav>
       <nav class="navbar-center">
         <a href="#about">ABOUT</a>
