--- a/(FE)/html/aboutus.html
+++ b/(FE)/html/aboutus.html
@@ -22,6 +22,16 @@
             <a href="#">MASUK</a>
             <a href="#">DAFTAR</a>
         </nav>
+        <div class="dropdown">
+          <button class="dropdown-btn"><img src="/resources/assets/menu_icon.png" width="30" height="30"></button>
+          <nav class="dropdown-menu">
+              <a href="#">ABOUT</a>
+              <a href="#">FAVORIT</a>
+              <a href="#">PRODUCT</a>
+              <a href="#">MASUK</a>
+              <a href="#">DAFTAR</a>
+          </nav>
+        </div>
     </header>
 
     <section class="who-we-are">
