--- a/(FE)/html/aboutus.html
+++ b/(FE)/html/aboutus.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-section">
-            <img src="/resources/assets/logo.gif" alt="Logo Desa Margodadi" class="logo">
+            <img src="/public/img/logo.gif" alt="Logo Desa Margodadi" class="logo">
             <div class="logo-text">
                 <p><em>UMKM</em></p>
                 <h1><em>DESA MARGODADI</em></h1>
@@ -23,7 +23,7 @@
             <a href="#">DAFTAR</a>
         </nav>
         <div class="dropdown">
-          <button class="dropdown-btn"><img src="/resources/assets/menu_icon.png" width="30" height="30"></button>
+          <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="30" height="30"></button>
           <nav class="dropdown-menu">
               <a href="#">ABOUT</a>
               <a href="#">FAVORIT</a>
@@ -31,12 +31,15 @@
               <a href="#">MASUK</a>
               <a href="#">DAFTAR</a>
           </nav>
+        <button class="mobile">
+          Menu
+        </button>
         </div>
     </header>
 
     <section class="who-we-are">
         <div class="image-section">
-            <img src="/resources/assets/gambar1.jpg" alt="Coding Image">
+            <img src="/public/img/gambar1.jpg" alt="Coding Image">
         
             <div class="quote">
                 <p>"We want to build a world where great ideas, products, and companies come to fruition quickly whilst achieving the required impact. Our work is to facilitate the process."</p>
@@ -53,7 +56,7 @@
     <section class="desa-section">
         <div class="desa-content">
             <div class="desa-image">
-                <img src="/resources/assets/gambar2.jpg" alt="Desa Margodadi">
+                <img src="/public/img/gambar2.jpg" alt="Desa Margodadi">
             </div>
             <div class="desa-text">
                 <h2>DESA MARGODADI</h2>
@@ -71,7 +74,7 @@
                 <div class="button-group">       
             </div>
             <div class="umkm-image">
-                <img src="/resources/assets/gambar3.jpg" alt="UMKM Desa Margodadi">
+                <img src="/public/img/gambar3.jpg" alt="UMKM Desa Margodadi">
             </div>
         </div>
     </section>
