--- a/(FE)/html/aboutus.html
+++ b/(FE)/html/aboutus.html
@@ -7,32 +7,25 @@
     <link rel="stylesheet" href="/(FE)/css/aboutus.css">
 </head>
 <body>
-    <header>
-        <div class="logo-section">
-            <img src="/public/img/logo.gif" alt="Logo Desa Margodadi" class="logo">
-            <div class="logo-text">
-                <p><em>UMKM</em></p>
-                <h1><em>DESA MARGODADI</em></h1>
-            </div>
-        </div>
-        <nav>
-            <a href="#">ABOUT</a>
-            <a href="#">FAVORITE</a>
-            <a href="#">PRODUCT</a>
-            <a href="#">MASUK</a>
-            <a href="#">DAFTAR</a>
-        </nav>
-        <div class="dropdown">
-          <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="30" height="30"></button>
-          <nav class="dropdown-menu">
-              <a href="#">ABOUT</a>
-              <a href="#">FAVORIT</a>
-              <a href="#">PRODUCT</a>
-              <a href="#">MASUK</a>
-              <a href="#">DAFTAR</a>
-          </nav>
-        </div>
-    </header>
+  <div class="navbar">
+    <div class="navbar-left">
+        <img src="/public/img/logo.gif" alt="Logo Margodadi" class="logo">
+      <span class="site-name">UMKM DESA MARGODADI</span>
+    </div>
+    <div class="navbar-center">
+      <a href="#about">ABOUT</a>
+      <a href="#product">PRODUCT</a>
+      <a href="#contact">CONTACT</a>
+    </div>
+    <div class="dropdown">
+      <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="30" height="30"></button>
+      <nav class="dropdown-menu">
+          <a href="#">ABOUT</a>
+          <a href="#">PRODUCT</a>
+          <a href="#">CONTACT</a>
+      </nav>
+    </div>
+  </div>
 
     <section class="who-we-are">
         <div class="image-section">
