--- a/(FE)/html/homepage2.html
+++ b/(FE)/html/homepage2.html
@@ -14,12 +14,18 @@
       <span class="site-name">UMKM DESA MARGODADI</span>
     </div>
     <div class="navbar-center">
-      <a href="#about">ABOUT</a>
-      <a href="#favorit">FAVORIT</a>
-      <a href="#product">PRODUCT</a>
-      <a href="#masuk">MASUK</a>
-      <a href="#daftar">DAFTAR</a>
-    </div>
+        <a href="#about">ABOUT</a>
+        <a href="#product">PRODUCT</a>
+        <a href="#contact">CONTACT</a>
+      </div>
+      <div class="dropdown">
+        <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="30" height="30"></button>
+        <nav class="dropdown-menu">
+            <a href="#">ABOUT</a>
+            <a href="#">PRODUCT</a>
+            <a href="#">CONTACT</a>
+        </nav>
+      </div>
   </div>
 
   <section class="product-grid">
