--- a/(FE)/html/contact.html
+++ b/(FE)/html/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UMKM Desa Margodadi</title>
-    <link rel="stylesheet" href="/(FE)/css/login page.css">
+    <link rel="stylesheet" href="/(FE)/css/contact.css">
 </head>
 <body>
     <div class="navbar">
