--- a/(FE)/html/homepage.html
+++ b/(FE)/html/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UMKM Desa Margodadi</title>
+  <title>UMKM DESA MARGODADI</title>
   <link rel="stylesheet" href="/(FE)/css/homepage.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <img src="/public/img/logo.gif" alt="Logo Margodadi" class="logo">
         <span class="site-name">
           <p><em>UMKM</em></p>
-          <p><em>Desa Margodadi</em></p>
+          <p><em>DESA MARGODADI</em></p>
         </span>
       </div>
       <div class="navbar-center">
