--- a/(FE)/html/homepage2.html
+++ b/(FE)/html/homepage2.html
@@ -14,7 +14,7 @@
         <img src="/public/img/logo.gif" alt="Logo Margodadi" class="logo">
         <span class="site-name">
           <p><em>UMKM</em></p>
-          <p><em>Desa Margodadi</em></p>
+          <p><em>DESA MARGODADI</em></p>
         </span>
       </div>
       <div class="navbar-center">
