--- a/(FE)/html/contact.html
+++ b/(FE)/html/contact.html
@@ -43,24 +43,26 @@
 
   <section class="info-section">
     <div class="info-image">
-      <svg width="62" height="57" viewBox="0 0 62 57" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g filter="url(#filter0_d_790_2109)">
-        <rect x="2" y="0.25" width="57.8118" height="53.25" rx="1.875" fill="white"/>
+      <svg  viewBox="0 0 107 152" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g filter="url(#filter0_d_748_1403)">
+        <rect x="4" y="0." width="120" height="120" rx="5" fill="white"/>
         </g>
+        <path d="M33.119 42.6698V101.857H57.4348V42.6698H33.119ZM31.0927 37.2891H59.4612C59.9986 37.2891 60.514 37.5725 60.894 38.077C61.274 38.5816 61.4875 39.2659 61.4875 39.9794V104.548C61.4875 105.261 61.274 105.946 60.894 106.45C60.514 106.955 59.9986 107.238 59.4612 107.238H31.0927C30.5553 107.238 30.0399 106.955 29.6599 106.45C29.2799 105.946 29.0664 105.261 29.0664 104.548V39.9794C29.0664 39.2659 29.2799 38.5816 29.6599 38.077C30.0399 37.5725 30.5553 37.2891 31.0927 37.2891Z" fill="black"/>
+        <path d="M37.1716 53.4297H53.3821V58.8104H37.1716V53.4297ZM37.1716 69.5718H53.3821V74.9525H37.1716V69.5718ZM37.1716 85.7139H53.3821V91.0946H37.1716V85.7139ZM61.4873 74.9525H69.5926V80.3332H61.4873V74.9525ZM61.4873 85.7139H69.5926V91.0946H61.4873V85.7139ZM25.0137 101.856H81.7505V107.237H25.0137V101.856Z" fill="black"/>
+        <path d="M61.4872 64.1873V101.852H73.6451V64.1873H61.4872ZM59.4609 58.8066H75.6715C76.2089 58.8066 76.7243 59.0901 77.1043 59.5946C77.4843 60.0992 77.6978 60.7835 77.6978 61.497V104.543C77.6978 105.256 77.4843 105.94 77.1043 106.445C76.7243 106.949 76.2089 107.233 75.6715 107.233H59.4609C58.9235 107.233 58.4081 106.949 58.0281 106.445C57.6481 105.94 57.4346 105.256 57.4346 104.543V61.497C57.4346 60.7835 57.6481 60.0992 58.0281 59.5946C58.4081 59.0901 58.9235 58.8066 59.4609 58.8066Z" fill="black"/>
         <defs>
-        <filter id="filter0_d_790_2109" x="0.5" y="0.25" width="60.8118" height="56.25" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+        <filter id="filter0_d_748_1403" x="0" y="0.728516" width="106.764" height="151.18" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
         <feFlood flood-opacity="0" result="BackgroundImageFix"/>
         <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-        <feOffset dy="1.5"/>
-        <feGaussianBlur stdDeviation="0.75"/>
+        <feOffset dy="4"/>
+        <feGaussianBlur stdDeviation="2"/>
         <feComposite in2="hardAlpha" operator="out"/>
         <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
-        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_790_2109"/>
-        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_790_2109" result="shape"/>
+        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_748_1403"/>
+        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_748_1403" result="shape"/>
         </filter>
         </defs>
         </svg>
-          
         
     </div>
       <div class="info-box">
