--- a/(FE)/html/homepage.html
+++ b/(FE)/html/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UMKM DESA MARGODADI</title>
+  <title>UMKM Desa Margodadi</title>
   <link rel="stylesheet" href="/(FE)/css/homepage.css">
 </head>
 <body>
