--- a/(FE)/html/homepage.html
+++ b/(FE)/html/homepage.html
@@ -17,9 +17,9 @@
         </span>
       </div>
       <div class="navbar-center">
-        <a href="#about">ABOUT</a>
+        <a href="aboutus.html">ABOUT</a>
         <a href="#product">PRODUCT</a>
-        <a href="#contact">CONTACT</a>
+        <a href="contact.html">CONTACT</a>
       </div>
       <div class="dropdown">
         <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="30" height="30"></button>
