--- a/(FE)/html/userpage.html
+++ b/(FE)/html/userpage.html
@@ -14,9 +14,9 @@
       <h1 class="site-name">UMKM<br> DESA MARGODADI</h1>
     </div>
     <div class="navbar-center">
-      <a href="#about">ABOUT</a>
+      <a href="aboutus.html">ABOUT</a>
       <a href="#product">PRODUCT</a>
-      <a href="#contact">CONTACT</a>
+      <a href="contact.html">CONTACT</a>
     </div>
     <div class="dropdown">
       <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="50" height="40"></button>
