--- a/(FE)/html/detail_produk.html
+++ b/(FE)/html/detail_produk.html
@@ -70,9 +70,9 @@
       <div class="footer-links">
         <h3>QUICK LINKS</h3>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="homepage.html">Home</a></li>
+            <li><a href="aboutus.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="#product">Product</a></li>
           </ul>
       </div>
