--- a/(FE)/html/homepage.html
+++ b/(FE)/html/homepage.html
@@ -144,12 +144,12 @@
       <div class="footer-container">
         <div class="footer-links">
           <h3>QUICK LINKS</h3>
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li><a href="#product">Product</a></li>
-            </ul>
+          <ul>
+            <li><a href="homepage.html">Home</a></li>
+            <li><a href="aboutus.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#product">Product</a></li>
+          </ul>
         </div>
         <div class="footer-service">
           <h3>SERVICES</h3>
