--- a/(FE)/html/homepage.html
+++ b/(FE)/html/homepage.html
@@ -18,7 +18,7 @@
       </div>
       <div class="navbar-center">
         <a href="aboutus.html">ABOUT</a>
-        <a href="#product">PRODUCT</a>
+        <a href="homepage.html">PRODUCT</a>
         <a href="contact.html">CONTACT</a>
       </div>
       <div class="dropdown">
