--- a/(FE)/html/contact.html
+++ b/(FE)/html/contact.html
@@ -67,7 +67,7 @@
     </div>
       <div class="info-box">
           <h2>Pay us a visit</h2>
-          <p>471, Alagbado off ijaye ojokoro <br> Inner Street Long Road, <br> Lagos Nigeria</p>
+          <p>Desa Margodadi Kec.  Jati Agung, <br>  Kab. Lampung Selatan, <br> Prov. Lampung</p>
       </div>
       <div class="info-box">
           <h2>Or drop us a line</h2>
