--- a/(FE)/html/contact.html
+++ b/(FE)/html/contact.html
@@ -36,8 +36,7 @@
           <h3>DO YOU HAVE ANY QUESTION</h3>
           </div>
           <h2>Contact Us</h2>
-          <p>We are located in Nigeria and we operate internationally,  with clients from
-            the US, UK, Canada, Australia, and many other countries.</p>
+          <p>Untuk menghubungi kami lebih lanjut, dapat dilihat alamat desa dan email kami dibawah.</p>
       </div>
   </section>
 
