--- a/(FE)/html/contact.html
+++ b/(FE)/html/contact.html
@@ -36,7 +36,7 @@
           <h3>DO YOU HAVE ANY QUESTION</h3>
           </div>
           <h2>Contact Us</h2>
-          <p>Untuk menghubungi kami lebih lanjut, dapat dilihat alamat desa dan email kami dibawah.</p>
+          <p>Untuk mengunjungi desa kami, anda dapat melihat alamat desa dan email kami dibawah berikut.</p>
       </div>
   </section>
 
