--- a/(FE)/html/homepage.html
+++ b/(FE)/html/homepage.html
@@ -24,9 +24,9 @@
       <div class="dropdown">
         <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="30" height="30"></button>
         <nav class="dropdown-menu">
-            <a href="#">ABOUT</a>
-            <a href="#">PRODUCT</a>
-            <a href="#">CONTACT</a>
+          <a href="aboutus.html">ABOUT</a>
+          <a href="homepage.html">PRODUCT</a>
+          <a href="contact.html">CONTACT</a>
         </nav>
       </div>
     </div>
@@ -91,49 +91,41 @@
     <section class="product-grid">
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Batik</p></h2>
         <p>Description</p>
       </div>
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Rengginang</p></h2>
         <p>Description</p>
       </div>
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Kerajinan Tangan</h2>
         <p>Product Description</p>
       </div>
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Batik</h2>
         <p>Description</p>
       </div>
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Batik</h2>
         <p>Description</p>
       </div>
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Batik</h2>
         <p>Description</p>
       </div>
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Batik</h2>
         <p>Description</p>
       </div>
       <div class="product-card">
         <img src="/public/img/rengginang.jpeg" class="product">
-        <img src="/public/img/favorite_icon.png" class="heart">
         <h2>Batik</h2>
         <p>Description</p>
       </div>
