--- a/(FE)/html/aboutus.html
+++ b/(FE)/html/aboutus.html
@@ -15,15 +15,15 @@
     </div>
     <div class="navbar-center">
       <a href="aboutus.html">ABOUT</a>
-      <a href="#product">PRODUCT</a>
+      <a href="homepage.html">PRODUCT</a>
       <a href="contact.html">CONTACT</a>
     </div>
     <div class="dropdown">
       <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="50" height="40"></button>
       <div class="dropdown-menu">
-          <a href="#about">ABOUT</a>
-          <a href="#product">PRODUCT</a>
-          <a href="#contact">CONTACT</a>
+        <a href="aboutus.html">ABOUT</a>
+        <a href="homepage.html">PRODUCT</a>
+        <a href="contact.html">CONTACT</a>
       </div>
   </div>
   </div>
