--- a/(FE)/html/login page.html
+++ b/(FE)/html/login page.html
@@ -14,15 +14,15 @@
       </div>
       <div class="navbar-center">
         <a href="aboutus.html">ABOUT</a>
-        <a href="#product">PRODUCT</a>
+        <a href="homepage.html">PRODUCT</a>
         <a href="contact.html">CONTACT</a>
       </div>
       <div class="dropdown">
         <button class="dropdown-btn"><img src="/public/img/menu_icon.png" width="30" height="30"></button>
         <nav class="dropdown-menu">
-            <a href="#">ABOUT</a>
-            <a href="#">PRODUCT</a>
-            <a href="#">CONTACT</a>
+          <a href="aboutus.html">ABOUT</a>
+          <a href="homepage.html">PRODUCT</a>
+          <a href="contact.html">CONTACT</a>
         </nav>
       </div>
     </div>
