--- a/(FE)/html/detail_produk.html
+++ b/(FE)/html/detail_produk.html
@@ -78,7 +78,7 @@
       <div class="footer-service">
         <h3>SERVICES</h3>
           <ul>
-            <li><a href="#profile">Profile Desa</a></li>
+            <li><a href="#https://www.margodadi.id/pemerintah">Profile Desa</a></li>
             <li><a href="#umkm">UMKM</a></li>
           </ul>
       </div>
